--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Feb 09 13:56:23 CST 2020
-sdk.dir=C\:\\Users\\g7sak\\AppData\\Local\\Android\\Sdk
+#Sat Mar 07 15:54:44 CST 2020
+sdk.dir=C\:\\Users\\shish\\AppData\\Local\\Android\\Sdk
